add favicon and logo

--- a/content/404.md
+++ b/content/404.md
@@ -3,9 +3,9 @@ layout: layouts/home.njk
 permalink: 404.html
 eleventyExcludeFromCollections: true
 ---
-# Content not found.
+# لینک مورد نظر یافت نشد ... {.rtl}
 
-Go <a href="/">home</a>.
+برگردیم به <a href="/">خانه</a>. {.rtl}
 
 <!--
 
